@@ -10,8 +10,6 @@ EXTRA_DIST = CHANGES CREDITS Doxyheader INSTALL \
 	lua/[A-Z]* lua/*.[ch] lua/local/l* \
 	file/src/[A-Z]* file/src/*.[ch] file/python file/magic file/doc file/[A-Z]* file/acinclude.m4 file/aclocal.m4 \
 	file/autogen.sh file/config* file/depcomp file/install-sh file/ltmain.sh file/missing file/mkinstalldirs \
-	js/Makefile.* js/*.[ch] \
-	ruby/Makefile.* ruby/*.[ch] \
 	perl/typemap \
 	perl/Makefile.PL.in \
 	perl/t/00.pod.t perl/t/00.pod.coverage.t \
@@ -114,7 +112,7 @@ if WITH_PATH_VERSIONED
 endif
 
 pkglibdir =		@USRLIBRPM@
-pkglib_DATA =	rpmpopt macros
+pkglib_DATA =	rpmpopt macros cpuinfo.yaml
 pkglib_SCRIPTS = install-sh mkinstalldirs
 
 noinst_HEADERS = build.h debug.h system.h
